// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButton euiButton--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props color accent is rendered 1`] = `
<button
  class="euiButton euiButton--accent"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color danger is rendered 1`] = `
<button
  class="euiButton euiButton--danger"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color ghost is rendered 1`] = `
<button
  class="euiButton euiButton--ghost"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color primary is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color secondary is rendered 1`] = `
<button
  class="euiButton euiButton--secondary"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color success is rendered 1`] = `
<button
  class="euiButton euiButton--success"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color text is rendered 1`] = `
<button
  class="euiButton euiButton--text"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props color warning is rendered 1`] = `
<button
  class="euiButton euiButton--warning"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props contentProps is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    aria-label="aria-label"
    class="euiButtonContent euiButton__content testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <span
      class="euiButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props fill is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--fill"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props fullWidth is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--fullWidth"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="euiButton euiButton--primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;

exports[`EuiButton props iconSide left is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props iconSide right is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButton__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props iconType is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isDisabled is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isDisabled renders a button even when href is defined 1`] = `
<button
  class="euiButton euiButton--primary euiButton-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isDisabled renders if passed as disabled 1`] = `
<button
  class="euiButton euiButton--primary euiButton-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isLoading is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiLoadingSpinner euiLoadingSpinner--medium euiButtonContent__spinner"
    />
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isSelected is rendered as false 1`] = `
<button
  aria-pressed="false"
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props isSelected is rendered as true 1`] = `
<button
  aria-pressed="true"
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props minWidth is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  style="min-width:0"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props size m is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props size s is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--small"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiButton props textProps is rendered 1`] = `
<button
  class="euiButton euiButton--primary"
  type="button"
>
  <span
    class="euiButtonContent euiButton__content"
  >
    <span
      aria-label="aria-label"
      class="euiButton__text testClass1 testClass2"
      data-test-subj="test subject string"
    >
      Content
    </span>
  </span>
</button>
`;
